ags (2.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented AgsUiOscRenewController
	* TODO:JK: implemented playback as clicking AgsPiano of AgsNotationEditor
	* implemented AgsSF2Loader
	* improved AgsFFPlayer to use AgsSF2Loader
	* improved AgsPiano missing event mask
	* fixed ags_piano_key_code_to_note() static const array note_map
	* TODO:JK: updated the API reference manual

ags (2.3.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_strv_contains() to compare strings
	* fixed AgsApplySoundConfig task to setup AgsWasapiDevout's AgsNotifySoundcard and AgsExportThread
	* fixed ags_sound_resource_read_wave() to deal with different samplerates
	* minor improvements

ags (2.3.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudioUnitDevout and AgsAudioUnitDevin
	* improved AgsScrolledPiano to draw properly on Win64

ags (2.3.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed WASAPI audio export in ags_export_thread.c

ags (2.3.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsPitchSampler missing filename after restore from XML

ags (2.3.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsPitchSampler to save filename in XML
	* fixed open project file on win64
	* minor improvements

ags (2.3.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing WASAPI export backend
	* fixed AgsApplySoundConfig accessing invalid pointer

ags (2.3.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed WASAPI size of buffer request
	* fixed AgsPreferences missing delete-event callback

ags (2.3.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed libags-audio API reference manual

ags (2.3.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed WASAPI friendly name
	* fixed don't initialize device if its already playing/recording
